# CMakePractice

./: CMakePracticeNote.md
test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello
test2/: CMakeLists.txt
test2/src/: CMakeLists.txt  main.c
test3/: CMakeLists.txt
test3/lib/: CMakeLists.txt  hello.c
test4/src/: CMakeLists.txt  main.c
test5/: CMakeLists.txt
test5/src/: CMakeLists.txt  main.c
test6/: CMakeLists.txt
test6/cmake/: FindHELLO.cmake
test6/src/: CMakeLists.txt  main.c
