SET(LIBHELLO_SRC hello.c)
# 在Mac上编译出来的共享库是以dylib结尾，Linux上才是so
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
# ADD_LIBRARY方法下的target是唯一，所以不能同名
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
# 所以要使用SET_TARGET_PROPERTIES方法里的OUTPUT_NAME属性来设置输出后的名字
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# 添加版本号 VERSION指代动态库版本，SOVERSION指代API版本
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)
# 安装共享库和头文件 静态库使用ARCHIVE关键字
INSTALL(TARGETS hello hello_static
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)